#master - Adicionar dados do banco em application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# MySQL
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.username=root
+spring.datasource.password=luis1707
 
+#exibe os comandos SQL
+#exibir as queries executadas
+spring.jpa.properties.hibernate.show_sql=true 
+#exibir qualquer comentário
+spring.jpa.properties.hibernate.use_sql_comments=true
+#formatar as queries ao exibir no console
+spring.jpa.properties.hibernate.format_sql=true
+#exibir tudo que acontece no banco de dados
+spring.jpa.properties.hibernate.type=trace
