--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 #exibir tudo que acontece no banco de dados
 spring.jpa.properties.hibernate.type=trace
+
+#para desabilitar autenticação
+security.basic.enable=false
